Release: v1.1.2 (#38)
* version: Bump to v1.1.2

* udp-to-hls: Fix duration measurement and segment sizing

- Bugs in the timing caused some issues which should now be fixed.

Segments would always be the basic segment duration config, not
actual duration of the segment, and would have issues sub 1 second.
This now should be fixed and more smoother output to the smoother.

* configs: Add missing env variables

- lower smoother latency, set udp socket buffer to 0 / auto-conf

* rps: Back pressure handling buffer from seg to udp

- allow smoother to have a smoother input
- connect the recieve and sent threads so they know how many seg's
  are in the queue and size and sleep till a certain size, avoid
  filling ram
- misc fixes improvements and configuration additions
- less spikes? YMMV testing now

* config: Derived improved values decreasing ram usage

* agent: Default to 100% sleep duration per seg

* hls-to-udp: Shorten poll time to 50 ms from 500 ms

- segments are shorter + this blocks our segment reading

* udp-to-hls: Increase pcap buffer to 8meg

- Remove unused variable for smoother buffer
- reduce some default values in hls-to-udp

* agent: Allow easy configuration of poll_ms

* agent: Raise segment duration to 500ms

- raise max segment size to 1meg

* manager: Wire up assets API functional now

---------
